[gd_scene load_steps=13 format=3 uid="uid://2wab3q35ssta"]

[ext_resource type="Script" uid="uid://b6lcp5llq0rsq" path="res://sources/menus/login/login.gd" id="1_spyuf"]
[ext_resource type="PackedScene" uid="uid://wdjp1sv55q4f" path="res://sources/menus/components/night_sky/night_sky.tscn" id="3_0my6t"]
[ext_resource type="PackedScene" uid="uid://blos4rn53qkwg" path="res://sources/minigames/base/kalulu.tscn" id="3_5b1v0"]
[ext_resource type="PackedScene" uid="uid://dxc82xcl7jncd" path="res://sources/menus/main/plants/palm.tscn" id="3_yrwu8"]
[ext_resource type="Texture2D" uid="uid://wtx3wqs0l4si" path="res://assets/minigames/minigame_ui/graphic/button_back_up.png" id="4_3vuah"]
[ext_resource type="Texture2D" uid="uid://cbhip35yyqneg" path="res://assets/minigames/minigame_ui/graphic/button_back_down.png" id="5_vd33f"]
[ext_resource type="PackedScene" uid="uid://djduptonofbh4" path="res://sources/menus/components/code_keyboard.tscn" id="5_xwrca"]
[ext_resource type="Texture2D" uid="uid://tcapan0mj64o" path="res://assets/minigames/minigame_ui/graphic/button_back_disabled.png" id="6_0dhup"]
[ext_resource type="Texture2D" uid="uid://iw84x6mx8h2g" path="res://assets/minigames/minigame_ui/graphic/button_kalulu_up.png" id="7_2wdoi"]
[ext_resource type="Texture2D" uid="uid://ub1dnysbojn8" path="res://assets/minigames/minigame_ui/graphic/button_kalulu_down.png" id="8_nxlxw"]
[ext_resource type="Texture2D" uid="uid://crnxawhf68po3" path="res://assets/minigames/minigame_ui/graphic/button_kalulu_disabled.png" id="9_k74e3"]
[ext_resource type="AudioStream" uid="uid://b85wy2h7fmvvf" path="res://assets/menus/login/intro_title_card.mp3" id="24_4xfja"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spyuf")

[node name="NightSky" parent="." instance=ExtResource("3_0my6t")]
layout_mode = 1

[node name="Palm" parent="." instance=ExtResource("3_yrwu8")]
position = Vector2(1280, 1800)
scale = Vector2(2.5, 2.5)

[node name="DeviceNumber" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.5
offset_top = 100.0
offset_right = 158.5
offset_bottom = 176.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeKeyboard" parent="." instance=ExtResource("5_xwrca")]
layout_mode = 1

[node name="InterfaceLeft" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(375, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Container" type="VBoxContainer" parent="InterfaceLeft"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="InterfaceLeft/Container"]
custom_minimum_size = Vector2(0, 275)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 4.0
texture_normal = ExtResource("4_3vuah")
texture_pressed = ExtResource("5_vd33f")
texture_disabled = ExtResource("6_0dhup")
stretch_mode = 4

[node name="KaluluButton" type="TextureButton" parent="InterfaceLeft/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 275)
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("7_2wdoi")
texture_pressed = ExtResource("8_nxlxw")
texture_disabled = ExtResource("9_k74e3")
stretch_mode = 4

[node name="InterfaceRight" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceRight"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="TeacherHelpLabel" type="Label" parent="InterfaceRight/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_vertical = 8
text = "TEACHER_SETTINGS_HELP"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TeacherButton" type="Button" parent="InterfaceRight/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 70
text = "SETTINGS"

[node name="TeacherTimer" type="Timer" parent="InterfaceRight/VBoxContainer/TeacherButton"]
unique_name_in_owner = true
wait_time = 5.0

[node name="Kalulu" parent="." instance=ExtResource("3_5b1v0")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_4xfja")

[connection signal="password_entered" from="CodeKeyboard" to="." method="_on_code_keyboard_password_entered"]
[connection signal="pressed" from="InterfaceLeft/Container/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="InterfaceLeft/Container/KaluluButton" to="." method="_on_kalulu_button_pressed"]
[connection signal="button_down" from="InterfaceRight/VBoxContainer/TeacherButton" to="." method="_on_teacher_button_button_down"]
[connection signal="button_up" from="InterfaceRight/VBoxContainer/TeacherButton" to="." method="_on_teacher_button_button_up"]
[connection signal="timeout" from="InterfaceRight/VBoxContainer/TeacherButton/TeacherTimer" to="." method="_on_teacher_timer_timeout"]
